--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-form-material-ui": "^4.3.0",
-    "redux-immutable": "^4.0.0"
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
