--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "immutable": "^3.8.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
-    "redux-form": "^7.0.4",
+    "redux-form": "7.0.4",
     "redux-form-material-ui": "^4.3.0",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0"
