--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "immutable": "^3.8.1",
+    "libphonenumber-js": "^0.4.32",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
     "react": "^16.0.0",
@@ -15,7 +16,8 @@
     "redux-form": "7.0.4",
     "redux-form-material-ui": "^4.3.0",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "validator": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
