--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "redux-devtools-extension": "^2.13.2"
   }
 }
